fix: Add border so active state doesn't make buttons look like they're jumping

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -10,6 +10,7 @@
 
 .home-component__buttons--answered, .home-component__buttons--unanswered {
 	background-color: #0099ff !important;
+	border: 3px solid #0099ff !important;
 }
 
 .home-component__buttons--unanswered {
